[Bootstrapping] Update the slave device's network connectivity status correctly.

BUG=637961

Review-Url: https://codereview.chromium.org/2251503002
Cr-Commit-Position: refs/heads/master@{#412082}

Former-commit-id: cde6092ba11fb99109c6cb898888e7933ffbfe22